// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuDropdown should be rendered correctly 1`] = `
<button
  aria-expanded={false}
  aria-haspopup={true}
  className="container uui-button-box uui-enabled -clickable root type-primary"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;

exports[`MainMenuDropdown should be rendered correctly 2`] = `
<button
  aria-expanded={false}
  aria-haspopup={true}
  className="container uui-button-box uui-enabled -clickable root type-primary"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption"
  >
    Test button
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;
